wiki: Devices: Fix for chrome
* Chrome on mobile adds an unwanted margin to the second column of the
  toc when hiding the discontinued devices
* This fixes it

--- a/_sass/lineage/_main.scss
+++ b/_sass/lineage/_main.scss
@@ -229,6 +229,7 @@ a {
 
 .vendor-container div {
   padding: .5rem;
+  -webkit-column-break-inside: avoid; /* Fix for additional unwanted margin on chrome */
 }
 
 @media (max-width: 991px) {
